--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </span>
           <img src="./assets/income.svg" alt="Image de Entradas">
         </h3>
-        <p>R$ 3.000,00</p>
+        <p id="incomeDisplay">R$ 3.000,00</p>
       </div>
 
       <div class="card">
@@ -40,7 +40,7 @@
           <img src="./assets/expense.svg" alt="Image de Entradas">
 
         </h3>
-        <p>R$ 3.000,00</p>
+        <p id="expenseDisplay">R$ 3.000,00</p>
       </div>
 
       <div class="card total">
@@ -51,7 +51,7 @@
           <img src="./assets/total.svg" alt="Image de Entradas">
 
         </h3>
-        <p>R$ 3.000,00</p>
+        <p id="totalDisplay">R$ 3.000,00</p>
       </div>
 
     </section>
@@ -69,26 +69,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td class="description">Luz</td>
-            <td class="expense">R$ -500,00</td>
-            <td>23/01/2021</td>
-            <td><a href="#"><img src="./assets/minus.svg" alt="Remover Transação"></a></td>
-          </tr>
-          <tr>
-            <td class="description">Água</td>
-            <td class="expense">R$ -100,00</td>
-            <td>23/01/2021</td>
-            <td><a href="#"><img src="./assets/minus.svg" alt="Remover Transação"></a></td>
 
-          </tr>
-          <tr>
-            <td class="description">Salário</td>
-            <td class="income">R$ 5.000,00</td>
-            <td>23/01/2021</td>
-            <td><a href="#"><img src="./assets/minus.svg" alt="Remover Transação"></a></td>
-
-          </tr>
         </tbody>
       </table>
     </section>
