--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </span>
           <img src="./assets/income.svg" alt="Image de Entradas">
         </h3>
-        <p id="incomeDisplay">R$ 3.000,00</p>
+        <p id="incomeDisplay">R$ 0,00</p>
       </div>
 
       <div class="card">
@@ -40,7 +40,7 @@
           <img src="./assets/expense.svg" alt="Image de Entradas">
 
         </h3>
-        <p id="expenseDisplay">R$ 3.000,00</p>
+        <p id="expenseDisplay">R$ 0,00</p>
       </div>
 
       <div class="card total">
@@ -51,7 +51,7 @@
           <img src="./assets/total.svg" alt="Image de Entradas">
 
         </h3>
-        <p id="totalDisplay">R$ 3.000,00</p>
+        <p id="totalDisplay">R$ 0,00</p>
       </div>
 
     </section>
@@ -79,7 +79,7 @@
     <div class="modal">
       <div id="form">
         <h2>Nova Transação</h2>
-        <form action="#" method="get">
+        <form action="" onsubmit="Form.submit(event)">
           <div class="input-group">
             <label class="sr-only" for="description">Descrição</label>
             <input type="text" name="description" id="description" placeholder="Descrição">
